--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "daggerheart-artefact",
-  "version": "1.0.1",
-  "description": "Daggerheart - Artefact - Módulo para criar e gerenciar Árvores de Talentos personalizadas com domínios customizados para jogadores de Daggerheart",
+  "name": "daggerheart-talent-tree",
+  "version": "1.0.2",
+  "description": "Um módulo para criar e gerenciar Árvores de Talentos personalizadas com domínios customizados para jogadores de Daggerheart",
   "main": "scripts/main.js",
   "keywords": [
     "foundryvtt",
